deploy_ceph-nano.yml
---
apiVersion: v1
kind: Service
metadata:
    name: ceph-nano-s3
    labels:
      app: ceph
      daemon: nano
spec:
  ports:
  - name: cn-s3
    port: 80
    protocol: TCP
    targetPort: 8000
  type: ClusterIP
  selector:
    app: ceph
    daemon: nano
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: ceph
    daemon: nano
  name: ceph-nano
spec:
  replicas: 1
  serviceName: ceph-nano
  selector:
    matchLabels:
      app: ceph
  template:
    metadata:
      name: ceph-nano
      labels:
        app: ceph
        daemon: nano
    spec:
      serviceAccount: anyuid #match with your anyuid
      serviceAccountName: anyuid #match with your anyuid
      containers:
      - image: registry.access.redhat.com/rhceph/rhceph-3-rhel7
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
          protocol: TCP
        name: cn-s3
        resources:
          limits:
            cpu: "1"
            memory: 512M
          requests:
            cpu: "1"
            memory: 512M
        volumeMounts:
          - name: cn-varlibceph
            mountPath: /var/lib/ceph
          - name: cn-etcceph
            mountPath: /etc/ceph
  volumeClaimTemplates:
  - metadata:
      name: cn-varlibceph
      labels:
        app: ceph
        daemon: nano
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: your-storage-class-name
      resources:
        requests:
          storage: 10Gi
  - metadata:
      name: cn-etcceph
      labels:
        app: ceph
        daemon: nano
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: your-storage-class-name
      resources:
        requests:
          storage: 10Mi
---
apiVersion: v1
kind: Route
metadata:
  name: ceph-nano-s3
spec:
  host: "your-route-host-name" #match with your RGW_NAME env variable name
  to:
    kind: Service
    name: ceph-nano-s3
  port:
    targetPort: cn-s3
  wildcardPolicy: None
